--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
+  color: #2e2f42;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -37,6 +38,7 @@ body {
 
 .menu-link {
   font-weight: 500;
+  color: #2e2f42;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -54,7 +56,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 .contact-link:hover,
 .contact-link:focus {
@@ -103,6 +104,7 @@ body {
 .benefits-list-title {
   font-weight: 500;
   font-size: 20px;
+  color: #2e2f42;
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
@@ -112,32 +114,35 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 /*====== /Benefits Styles/ ======*/
 
 /*====== Team Styles ======*/
 
-.benefits-section {
+.team-section {
   background-color: #f4f4fd;
 }
 
 .team-main-title {
   font-weight: 700;
   font-size: 36px;
+  color: #2e2f42;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
 }
 
+.team-list {
+  background-color: #ffffff;
+}
 .team-list-name {
   font-weight: 500;
   font-size: 20px;
+  color: #2e2f42;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
-  background-color: #ffffff;
 }
 
 .team-list-description {
@@ -146,7 +151,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #434455;
 }
 
 /*====== /Team Styles/ ======*/
@@ -156,14 +160,17 @@ body {
 .portfolio-title {
   font-weight: 700;
   font-size: 36px;
+  color: #2e2f42;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
 }
 
 .portfolio-list-title {
   font-weight: 500;
   font-size: 20px;
+  color: #2e2f42;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -174,7 +181,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
 }
 /*====== /Portfolio Styles/ ======*/
 
