--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
   color: #4d5ae5;
 }
 
-.color-black {
+.color-bl {
   color: #2e2f42;
 }
 
@@ -190,7 +190,7 @@ body {
   background-color: #2e2f42;
 }
 
-.color-white {
+.color-wh {
   color: #f4f4fd;
 }
 .footer-description {
